Fixed dark mode mobile hamburger icon

--- a/app/resources/assets/sass/accessible-dark-mode.scss
+++ b/app/resources/assets/sass/accessible-dark-mode.scss
@@ -54,3 +54,9 @@ tr, li, nav.mobile, nav.desktop, .cd-morph-dropdown, .cd-morph-dropdown .content
 .alert > span {
 	color: rgb(0, 0, 0) !important
 }
+
+// Mobile menu hamburger
+
+.mobile-menu li {
+	background-color: white !important;
+}
